<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".FirstFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:fontFamily="@font/cera_pro_medium"
            android:gravity="center_horizontal"
            android:hint="@string/name_placeholder"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="34sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="220dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/language_scroll_view"
                android:layout_width="300dp"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:animateLayoutChanges="true"
                android:background="@drawable/dropdown_background"
                android:persistentDrawingCache="animation">

                <LinearLayout
                    android:id="@+id/languages_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/select_btn"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:background="@color/transparent"
                            android:fontFamily="@font/cera_pro_medium"
                            android:gravity="start"
                            android:paddingLeft="35dp"
                            android:paddingTop="18dp"
                            android:text="@string/select_language"
                            android:textAllCaps="false"
                            android:textColor="@color/dark"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            app:backgroundTint="@null" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <ImageView
                            android:id="@+id/drop_down_chevron"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center_vertical|end"
                            android:contentDescription="@string/down_chevron_description"
                            android:foregroundGravity="right"
                            android:paddingLeft="0dp"
                            android:paddingTop="18dp"
                            android:paddingRight="25dp"
                            android:src="@drawable/chevron_down" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/button_description"
                android:scaleType="centerInside"
                android:src="@drawable/cloud" />

            <Button
                android:id="@+id/button_first"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/transparent"
                android:fontFamily="@font/cera_pro_light"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:backgroundTint="@null" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/cera_pro_light"
                    android:text="@string/button_text"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/right_chevron_description"
                    android:src="@drawable/chevron_double_right" />
            </LinearLayout>

        </FrameLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>